# tardigrade-error-tools

./: .gitignore  .gitlab-ci.yml  CD.sh  CI.sh  CMakeLists.txt  INSTALL.sh  README.md  README.rst  ReadMe  TEST.sh  activate_w13pythonenv.sh  config.mk  config.xml  environment.txt  environment.yaml  jenkins_build.sh  jenkins_deploy.sh  new_build.sh  pytest_error_tools.sh  set_vars.sh  update_dependencies.sh
configuration_files/: config.xml.multiagent_deploy  config.xml.multiagent_pr_builder  config.xml.pr_builder  environment.yml
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  api.rst  changelog.rst  conf.py  conf.py.in  error_tools.rst  index.rst  targets.txt  user.rst
modulefiles/: error_tools-env  tardigrade_error_tools-env
recipe/: conda_build_config.yaml  meta.yaml
src/cmake/: GetVersionFromGitTag.cmake
src/cpp/: CMakeLists.txt  config.h.in  error_tools.cpp  error_tools.h  error_tools.h.in  tardigrade_error_tools.cpp
src/cpp/tests/: CMakeLists.txt  test_error_tools.cpp
src/cpp/tests/error_tools/: .gitignore  CMakeLists.txt  execute_tests.sh  makefile  test_error_tools.cpp
src/python/: CMakeLists.txt  error_tools.pxd  error_tools.pyx  error_tools_python.pxd  error_tools_python.pyx  settings.py  settings.py.in  setup.py  tardigrade_error_tools_python.pxd  tardigrade_error_tools_python.pyx
src/python/tests/: test_error_tools.py  test_tardigrade_error_tools.py
